# advent-of-code-2022

./: LICENSE  README.md
cicavey/01/: Cargo.toml
cicavey/01/src/: lib.rs  main.rs  work.rs
cicavey/02/src/: lib.rs  work.rs
cicavey/03/src/: work.rs
cicavey/04/src/: work.rs
cicavey/05/src/: work.rs
cicavey/05/www/: package.json
cicavey/06/: Cargo.toml
cicavey/06/src/: work.rs
cicavey/07/src/: main.rs  work.rs
cicavey/08/src/: work.rs
cicavey/09/: Cargo.toml
cicavey/09/src/: work.rs
cicavey/10/src/: work.rs
cicavey/11/src/: work.rs
cicavey/13/: Cargo.toml
cicavey/13/src/: work.rs
cicavey/14/src/: work.rs
cicavey/14/www/: package-lock.json
cicavey/aoc/: Cargo.toml
cicavey/aoc/src/: lib.rs
jdshaw/: Makefile
jdshaw/01/: sol.c
jdshaw/02/: sol.c
jdshaw/03/: sol.c
jdshaw/04/: Makefile  sol.c
jdshaw/05/: sol.c
jdshaw/06/: Makefile  sol.c
jdshaw/07/: sol.c
jdshaw/08/: sol.c
jdshaw/09/: sol.c
jdshaw/10/: Makefile  sol.c
jdshaw/11/: sol.c
jdshaw/12/: sol.c
jdshaw/13/: sol.c
jdshaw/14/: sol.c
jdshaw/15/: sol.c
jdshaw/lib/inc/: Utils.h
jdshaw/lib/src/: utils.c
